Fixed height-cropping of banner

--- a/Project/css/style.css
+++ b/Project/css/style.css
@@ -82,6 +82,11 @@ body {
 		width: 100%;
 	}
 }
+@media only screen and (min-height: 1200px) {
+	#banner img {
+		height: 100%;
+	}
+}
 #banner p {
 	position: absolute;
 	top: 50%;
